--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/default-value/outputRemainingChars.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/default-value/outputRemainingChars.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<h:inputTextarea id="inputTextareaInit" maxlength="140" value="Default text" />
+				<alloy:inputTextarea id="inputTextareaInit" maxlength="140" value="Default text" />
 				<br />
 				<alloy:outputRemainingChars for="inputTextareaInit" value="There are {0} character(s) remaining." />
 			</showcase:example>
