--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/instant-ajax/datePicker.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/instant-ajax/datePicker.xhtml
@@ -6,10 +6,10 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<h:inputText id="birthday" value="#{datePickerModelBean.birthday}">
+				<alloy:inputText id="birthday" value="#{datePickerModelBean.birthday}">
 					<f:ajax render="@form" />
 					<f:convertDateTime pattern="MM/dd/yyyy" />
-				</h:inputText>
+				</alloy:inputText>
 				<alloy:datePicker datePattern="MM/dd/yyyy" for="birthday" />
 			</showcase:example>
 			<showcase:outputModel>
