--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/multiple-panes/datePicker.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datepicker/multiple-panes/datePicker.xhtml
@@ -6,9 +6,9 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<h:inputText id="birthday" value="#{datePickerModelBean.birthday}">
+				<alloy:inputText id="birthday" value="#{datePickerModelBean.birthday}">
 					<f:convertDateTime pattern="MM/dd/yyyy" />
-				</h:inputText>
+				</alloy:inputText>
 				<alloy:datePicker datePattern="MM/dd/yyyy" for="birthday" panes="3" />
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
