--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/general/outputRemainingChars.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/general/outputRemainingChars.xhtml
@@ -4,11 +4,11 @@
 	template="/templates/component-2col.xhtml">
 
 	<ui:define name="col1">
-		<!-- Example 1: Associate with an h:inputText and specify a {0} token within the value attribute. -->
+		<!-- Example 1: Associate with an alloy:inputText and specify a {0} token within the value attribute. -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-outputremainingchars-general-example-1']}" longDescription="true"
 				number="1" renderedCheckbox="true">
-				<h:inputText id="inputText" maxlength="10" value="#{outputRemainingCharsModelBean.text}" />
+				<alloy:inputText id="inputText" maxlength="10" value="#{outputRemainingCharsModelBean.text}" />
 				<br />
 				<alloy:outputRemainingChars for="inputText" rendered="#{showcaseModelBean.selectedComponent.rendered}"
 					value="There are {0} character(s) remaining." />
@@ -24,11 +24,11 @@
 	</ui:define>
 
 	<ui:define name="col2">
-		<!-- Example 2: Associate with an h:inputTextarea and simply render the number of remaining characters. -->
+		<!-- Example 2: Associate with an alloy:inputTextarea and simply render the number of remaining characters. -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-outputremainingchars-general-example-2']}" longDescription="true"
 				number="2" renderedCheckbox="true">
-				<h:inputTextarea id="inputTextarea" maxlength="20" value="#{outputRemainingCharsModelBean.text}" />
+				<alloy:inputTextarea id="inputTextarea" maxlength="20" value="#{outputRemainingCharsModelBean.text}" />
 				<br />
 				<alloy:outputRemainingChars for="inputTextarea" rendered="#{showcaseModelBean.selectedComponent.rendered}" />
 				<hr />
