--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/pickdate/general/pickDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/pickdate/general/pickDate.xhtml
@@ -6,17 +6,17 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example>
-				<alloy:inputText id="birthday" value="#{datePickerModelBean.birthday}">
+				<alloy:inputText id="birthday" value="#{pickDateModelBean.birthday}">
 					<f:convertDateTime pattern="MM/dd/yyyy" />
 				</alloy:inputText>
-				<alloy:datePicker datePattern="MM/dd/yyyy" for="birthday" />
+				<alloy:pickDate datePattern="MM/dd/yyyy" for="birthday" />
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<alloy:outputText id="modelValue" value="#{datePickerModelBean.birthday}">
+				<alloy:outputText id="modelValue" value="#{pickDateModelBean.birthday}">
 					<f:convertDateTime pattern="MM/dd/yyyy" />
 				</alloy:outputText>
 			</showcase:outputModel>
