--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/pickdate/localization/pickDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/pickdate/localization/pickDate.xhtml
@@ -7,8 +7,8 @@
 		<!-- Example 1: Hard coded Brazilian Portuguese locale -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-datepicker-localization-example-1']}" number="1">
-				<alloy:datePicker for="portugueseDateInput" binding="#{portugueseDatePicker}" locale="pt-BR" />
-				<alloy:inputText id="portugueseDateInput" value="#{datePickerModelBean.birthday}">
+				<alloy:pickDate for="portugueseDateInput" binding="#{portugueseDatePicker}" locale="pt-BR" />
+				<alloy:inputText id="portugueseDateInput" value="#{pickDateModelBean.birthday}">
 					<f:convertDateTime pattern="#{portugueseDatePicker.datePattern}" />
 				</alloy:inputText>
 				<hr />
@@ -17,7 +17,7 @@
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<alloy:outputText id="portugueseSelection" value="#{datePickerModelBean.birthday}">
+				<alloy:outputText id="portugueseSelection" value="#{pickDateModelBean.birthday}">
 					<f:convertDateTime pattern="#{portugueseDatePicker.datePattern}" />
 				</alloy:outputText>
 			</showcase:outputModel>
@@ -28,8 +28,8 @@
 		<!-- Example 2: Japanese Locale obtained from a bean via EL -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-datepicker-localization-example-2']}" number="2">
-				<alloy:datePicker for="japaneseDateInput" binding="#{japaneseDatePicker}" locale="#{datePickerModelBean.locale}" />
-				<alloy:inputText id="japaneseDateInput" value="#{datePickerModelBean.birthday}">
+				<alloy:pickDate for="japaneseDateInput" binding="#{japaneseDatePicker}" locale="#{pickDateModelBean.locale}" />
+				<alloy:inputText id="japaneseDateInput" value="#{pickDateModelBean.birthday}">
 					<f:convertDateTime pattern="#{japaneseDatePicker.datePattern}" />
 				</alloy:inputText>
 				<hr />
@@ -38,7 +38,7 @@
 				</alloy:commandButton>
 			</showcase:example>
 			<showcase:outputModel>
-				<alloy:outputText id="japaneseSelection" value="#{datePickerModelBean.birthday}">
+				<alloy:outputText id="japaneseSelection" value="#{pickDateModelBean.birthday}">
 					<f:convertDateTime pattern="#{japaneseDatePicker.datePattern}" />
 				</alloy:outputText>
 			</showcase:outputModel>
