--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/component-1col-80.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/component-1col-80.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui-nongen"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 	<aui:row>
