--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase.xhtml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui-nongen="http://liferay.com/faces/aui-nongen"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
-	<aui-nongen:row>
-		<aui-nongen:col width="20">
-			<aui-nongen:list>
+	<aui:row>
+		<aui:col width="20">
+			<aui:list>
 				<ui:repeat value="#{listModelBean.showcaseComponents}" var="showcaseComponent">
-					<aui-nongen:list-item>
+					<aui:list-item>
 						<h:outputText value="#{showcaseComponent}" />
-						<aui-nongen:list>
+						<aui:list>
 							<ui:repeat value="#{showcaseComponent.useCases}" var="useCase">
-								<aui-nongen:list-item>
+								<aui:list-item>
 									<h:link value="#{i18n[useCase.name]}">
 										<f:param name="componentPrefix" value="#{showcaseComponent.prefix}" />
 										<f:param name="componentName" value="#{showcaseComponent.lowerCaseName}" />
 										<f:param name="componentUseCase" value="#{useCase.name}" />
 									</h:link>
-								</aui-nongen:list-item>
+								</aui:list-item>
 							</ui:repeat>
-						</aui-nongen:list>
-					</aui-nongen:list-item>
+						</aui:list>
+					</aui:list-item>
 				</ui:repeat>
-			</aui-nongen:list>
-		</aui-nongen:col>
-		<aui-nongen:col width="80">
+			</aui:list>
+		</aui:col>
+		<aui:col width="80">
 			<ui:insert name="content" />
-		</aui-nongen:col>
-	</aui-nongen:row>
+		</aui:col>
+	</aui:row>
 </ui:composition>
