--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-webapp.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-webapp.xhtml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html class="aui" lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
+<html class="aui" lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
 	<title>Liferay Faces Showcase</title>
