--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/component-3col.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/component-3col.xhtml
@@ -1,16 +1,16 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-	<aui:row>
-		<aui:col width="33">
+	<alloy:row>
+		<alloy:column width="33">
 			<ui:insert name="col1" />
-		</aui:col>
-		<aui:col width="33">
+		</alloy:column>
+		<alloy:column width="33">
 			<ui:insert name="col2" />
-		</aui:col>
-		<aui:col width="33">
+		</alloy:column>
+		<alloy:column width="33">
 			<ui:insert name="col3" />
-		</aui:col>
-	</aui:row>
+		</alloy:column>
+	</alloy:row>
 
 </ui:composition>
