--- a/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-webapp.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/templates/showcase-webapp.xhtml
@@ -5,7 +5,7 @@
 <h:head>
 	<title>Liferay Faces Showcase</title>
 </h:head>
-<h:body>
+<h:body styleClass="yui3-skin-sam">
 	<ui:include src="showcase.xhtml" />
 </h:body>
 </html>
