--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/immediate/commandButton.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandbutton/immediate/commandButton.xhtml
@@ -7,7 +7,7 @@
 		<!-- Example 1: ActionListener execution when immediate is true -->
 		<h:form>
 			<showcase:example description="#{i18n['actionlistener-execution-when-immediate-is-true']}" number="1">
-				<h:messages globalOnly="true" styleClass="feedback" />
+				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:commandButton actionListener="#{commandButtonBackingBean.actionListener}" immediate="true"
 					value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
@@ -20,7 +20,7 @@
 		<!-- Example 2: ActionListener execution when immediate is false (the default) -->
 		<h:form>
 			<showcase:example description="#{i18n['actionlistener-execution-when-immediate-is-false']}" number="2">
-				<h:messages globalOnly="true" styleClass="feedback" />
+				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:commandButton actionListener="#{commandButtonBackingBean.actionListener}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
 				</alloy:commandButton>
