--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/field/general/field.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/field/general/field.xhtml
@@ -8,7 +8,7 @@
 			<showcase:example description="#{i18n['alloy-field-general-example-1']}" renderedCheckbox="true">
 				<alloy:field id="field" label="#{i18n['field-label']}" rendered="#{showcaseModelBean.selectedComponent.rendered}">
 					<alloy:inputText id="inputText" required="true" />
-					<h:message for="inputText" />
+					<alloy:message for="inputText" />
 				</alloy:field>
 				<alloy:commandButton value="#{i18n['submit-and-re-render-field']}">
 					<f:ajax execute="@form" render="field" />
