--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/field/message-styling/field.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/field/message-styling/field.xhtml
@@ -8,7 +8,7 @@
 			<showcase:example description="#{i18n['alloy-field-message-styling-example-1']}" number="1">
 				<alloy:field id="field" label="#{i18n['info']}">
 					<alloy:inputText id="inputText" validator="#{fieldBackingBean.infoValidator}" value="default text" />
-					<h:message for="inputText" />
+					<alloy:message for="inputText" />
 				</alloy:field>
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="field" />
@@ -22,7 +22,7 @@
 			<showcase:example description="#{i18n['alloy-field-message-styling-example-2']}" number="2">
 				<alloy:field id="field" label="#{i18n['warning']}">
 					<alloy:inputText id="inputText" validator="#{fieldBackingBean.warningValidator}" value="default text" />
-					<h:message for="inputText" />
+					<alloy:message for="inputText" />
 				</alloy:field>
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="field" />
@@ -36,7 +36,7 @@
 			<showcase:example description="#{i18n['alloy-field-message-styling-example-3']}" number="3">
 				<alloy:field id="field" label="#{i18n['error']}">
 					<alloy:inputText id="inputText" validator="#{fieldBackingBean.errorValidator}" value="default text" />
-					<h:message for="inputText" />
+					<alloy:message for="inputText" />
 				</alloy:field>
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="field" />
