--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtextarea/general/inputTextarea.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtextarea/general/inputTextarea.xhtml
@@ -9,7 +9,7 @@
 				<alloy:inputTextarea id="textarea" rendered="#{showcaseModelBean.selectedComponent.rendered}"
 					required="#{showcaseModelBean.selectedComponent.required}" requiredMessage="#{i18n['required-message']}"
 					value="#{inputTextModelBean.text}" />
-				<h:message for="textarea" />
+				<alloy:message for="textarea" />
 				<hr />
 				<alloy:commandButton action="#{inputTextBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
