--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/general/selectStarRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/general/selectStarRating.xhtml
@@ -15,7 +15,7 @@
 					<f:selectItem itemLabel="Lightweight" itemValue="4" />
 					<f:selectItem itemLabel="Open Source" itemValue="5" />
 				</alloy:selectStarRating>
-				<h:message for="starRating" />
+				<alloy:message for="starRating" />
 				<hr />
 				<alloy:commandButton action="#{selectStarRatingBackingBean.submit}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
